--- a/config/splitkb_aurora_sweep.conf
+++ b/config/splitkb_aurora_sweep.conf
@@ -7,3 +7,6 @@
 
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
